c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_member_operators/arrow_pointer_to_non_struct.c
struct s {
    long l;
};

int main(void) {
    double d = 0.0;
    double* ptr = &d;
    return ptr->l;  // can't apply -> operator to pointer to non-struct
}